adding the rest of the questions- working on restarting the timer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-
+    <button class = "start">Start</button>
     <p>
         Timer <span id = "time-remaining"></span>
     </p>
@@ -18,48 +18,88 @@
             correct <span id = "correct-answers"></span>
         </p>
         <p>
-            incorrect <span id = "incorrect-answers"></span>
+            incorrect <span id = "wrong-answers"></span>
         </p>
 
     </div>
 
     <div class = "question-container">
         <!-- questions -->
-        <p id= "question1">questions</p>
-        <input type = "radio" name ="question1-option" value = "answerchoice">answerchoice
-        <input type = "radio" name ="question1-option" value = "choices">choices
-        <input type = "radio" name ="question1-option" value = "answer">answer
-        <input type = "radio" name ="question1-option" value = "ac">ac
+        <p id= "question1">Where does Tony Soprano live?</p>
+        <input type = "radio" name ="question1-option" value = "Newark">Newark
+        <input type = "radio" name ="question1-option" value = "Wildwood">Wildwood
+        <input type = "radio" name ="question1-option" value = "North-Caldwell">North Caldwell
+        <input type = "radio" name ="question1-option" value = "West-Caldwell">West Caldwell
 
     </div>
 
     <div class = "question-container">
         <!-- questions -->
-        <p id= "question2">questions</p>
-        <input type = "radio" name ="question2-option" value = "answer">answer
-        <input type = "radio" name ="question2-option" value = "choices">choices
-        <input type = "radio" name ="question2-option" value = "sc">sc
-        <input type = "radio" name ="question2-option" value = "ac">ac
+        <p id= "question2">Where did his Daughter go to school?</p>
+        <input type = "radio" name ="question2-option" value = "NYU">NYU
+        <input type = "radio" name ="question2-option" value = "Georgetown-University>">Georgetown University
+        <input type = "radio" name ="question2-option" value = "Princeton-University">Princeton University
+        <input type = "radio" name ="question2-option" value = "Rutgers-University">Rutgers University
 
     </div>
 
     <div class = "question-container">
         <!-- questions -->
-        <p id= "question3">questions</p>
-        <input type = "radio" name ="question3-option" value = "ans">ans
-        <input type = "radio" name ="question3-option" value = "answer">answer
-        <input type = "radio" name ="question3-option" value = "swer">swer
-        <input type = "radio" name ="question3-option" value = "answ">answ
+        <p id= "question3">Where did Janice live before returning home</p>
+        <input type = "radio" name ="question3-option" value = "Seattle">Seattle
+        <input type = "radio" name ="question3-option" value = "Portland">Portland
+        <input type = "radio" name ="question3-option" value = "Flagstaff>">Flagstaff
+        <input type = "radio" name ="question3-option" value = "Ocean-City">Ocean City
 
     </div>
 
-    <div class = "question-container">
+    <div class = "question-container?">
         <!-- questions -->
-        <p id= "question4">questions</p>
-        <input type = "radio" name ="question4-option" value = "cup">cup
-        <input type = "radio" name ="question4-option" value = "knife">knife
-        <input type = "radio" name ="question4-option" value = "spoon">spoon
-        <input type = "radio" name ="question4-option" value = "spork">spork
+        <p id= "question4">Who was Tony's Consigliere?</p>
+        <input type = "radio" name ="question4-option" value = "Paulie">Paulie
+        <input type = "radio" name ="question4-option" value = "Chris">Chris
+        <input type = "radio" name ="question4-option" value = "Sil">Sil
+        <input type = "radio" name ="question4-option" value = "Bobby">Bobby
+
+    </div>
+
+    <div class = "question-container?">
+        <!-- questions -->
+        <p id= "question4">What was the name of Tony's club?</p>
+        <input type = "radio" name ="question4-option" value = "Cherry's">Cherry's
+        <input type = "radio" name ="question4-option" value = "The crazy Horse">The Crazy Horse
+        <input type = "radio" name ="question4-option" value = "Girls-Girls-Girls">Girls Girls Girls
+        <input type = "radio" name ="question4-option" value = "The-Bing">The Bing
+
+    </div>
+
+    <div class = "question-container?">
+        <!-- questions -->
+        <p id= "question4"></p>
+        <input type = "radio" name ="question4-option" value = "">
+        <input type = "radio" name ="question4-option" value = "Chris">Chris
+        <input type = "radio" name ="question4-option" value = "Sil">Sil
+        <input type = "radio" name ="question4-option" value = "Bobby">Bobby
+
+    </div>
+
+    <div class = "question-container?">
+        <!-- questions -->
+        <p id= "question4">What was the name of Tony's boat?</p>
+        <input type = "radio" name ="question4-option" value = "Meadow">Virginia
+        <input type = "radio" name ="question4-option" value = "Elanor">Elanor
+        <input type = "radio" name ="question4-option" value = "Ruger">Ruger
+        <input type = "radio" name ="question4-option" value = "Stugots">Stugots
+
+    </div>
+
+    <div class = "question-container?">
+        <!-- questions -->
+        <p id= "question4">What animal lived in Tony's pool?</p>
+        <input type = "radio" name ="question8-option" value = "fish">fish
+        <input type = "radio" name ="question8-option" value = "ducks">ducks
+        <input type = "radio" name ="question8-option" value = "eels">eels
+        <input type = "radio" name ="question8-option" value = "flamingos">flamingos
 
     </div>
     <script src="assets/javascript/app.js"></script>
