cleaning up questions and answer vars

--- a/index.html
+++ b/index.html
@@ -75,21 +75,21 @@
 
     <div class = "question-container?">
         <!-- questions -->
-        <p id= "question4"></p>
-        <input type = "radio" name ="question4-option" value = "">
-        <input type = "radio" name ="question4-option" value = "Chris">Chris
-        <input type = "radio" name ="question4-option" value = "Sil">Sil
-        <input type = "radio" name ="question4-option" value = "Bobby">Bobby
+        <p id= "question7">who is Tony's therapist?</p>
+        <input type = "radio" name ="question7-option" value = "Dr-Melfi">Dr Melfi
+        <input type = "radio" name ="question7-option" value = "Dr-Angelini">Dr Angelini
+        <input type = "radio" name ="question7-option" value = "Dr-Cusmano">Dr Cusmano
+        <input type = "radio" name ="question7-option" value = "Dr-Robert">Dr Robert
 
     </div>
 
     <div class = "question-container?">
         <!-- questions -->
-        <p id= "question4">What was the name of Tony's boat?</p>
-        <input type = "radio" name ="question4-option" value = "Meadow">Virginia
-        <input type = "radio" name ="question4-option" value = "Elanor">Elanor
-        <input type = "radio" name ="question4-option" value = "Ruger">Ruger
-        <input type = "radio" name ="question4-option" value = "Stugots">Stugots
+        <p id= "question8">What was the name of Tony's boat?</p>
+        <input type = "radio" name ="question8-option" value = "Meadow">Virginia
+        <input type = "radio" name ="question8-option" value = "Elanor">Elanor
+        <input type = "radio" name ="question8-option" value = "Ruger">Ruger
+        <input type = "radio" name ="question8-option" value = "Stugots">Stugots
 
     </div>
 
