fixing score keeping issues.

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>Document</title>
 </head>
 <body>
-    <button class = "start">Start</button>
+    
     <p>
         Timer <span id = "time-remaining"></span>
     </p>
@@ -36,7 +37,7 @@
     <div class = "question-container">
         <!-- questions -->
         <p id= "question2">Where did his Daughter go to school?</p>
-        <input type = "radio" name ="question2-option" value = "NYU">NYU
+        <input type = "radio" name ="question2-option" value = "Columbia-University">Columbia Univeristy
         <input type = "radio" name ="question2-option" value = "Georgetown-University>">Georgetown University
         <input type = "radio" name ="question2-option" value = "Princeton-University">Princeton University
         <input type = "radio" name ="question2-option" value = "Rutgers-University">Rutgers University
@@ -53,7 +54,7 @@
 
     </div>
 
-    <div class = "question-container?">
+    <div class = "question-container">
         <!-- questions -->
         <p id= "question4">Who was Tony's Consigliere?</p>
         <input type = "radio" name ="question4-option" value = "Paulie">Paulie
@@ -63,39 +64,39 @@
 
     </div>
 
-    <div class = "question-container?">
+    <div class = "question-container">
         <!-- questions -->
-        <p id= "question4">What was the name of Tony's club?</p>
-        <input type = "radio" name ="question4-option" value = "Cherry's">Cherry's
-        <input type = "radio" name ="question4-option" value = "The crazy Horse">The Crazy Horse
-        <input type = "radio" name ="question4-option" value = "Girls-Girls-Girls">Girls Girls Girls
-        <input type = "radio" name ="question4-option" value = "The-Bing">The Bing
+        <p id= "question5">What was the name of Tony's club?</p>
+        <input type = "radio" name ="question5-option" value = "Cherry's">Cherry's
+        <input type = "radio" name ="question5-option" value = "The crazy Horse">The Crazy Horse
+        <input type = "radio" name ="question5-option" value = "Girls-Girls-Girls">Girls Girls Girls
+        <input type = "radio" name ="question5-option" value = "The-Bing">The Bing
 
     </div>
 
-    <div class = "question-container?">
+    <div class = "question-container">
         <!-- questions -->
-        <p id= "question7">who is Tony's therapist?</p>
-        <input type = "radio" name ="question7-option" value = "Dr-Melfi">Dr Melfi
-        <input type = "radio" name ="question7-option" value = "Dr-Angelini">Dr Angelini
-        <input type = "radio" name ="question7-option" value = "Dr-Cusmano">Dr Cusmano
-        <input type = "radio" name ="question7-option" value = "Dr-Robert">Dr Robert
+        <p id= "question6">who is Tony's therapist?</p>
+        <input type = "radio" name ="question6-option" value = "Dr-Melfi">Dr Melfi
+        <input type = "radio" name ="question6-option" value = "Dr-Angelini">Dr Angelini
+        <input type = "radio" name ="question6-option" value = "Dr-Cusmano">Dr Cusmano
+        <input type = "radio" name ="question6-option" value = "Dr-Robert">Dr Robert
 
     </div>
 
-    <div class = "question-container?">
+    <div class = "question-container">
         <!-- questions -->
-        <p id= "question8">What was the name of Tony's boat?</p>
-        <input type = "radio" name ="question8-option" value = "Meadow">Virginia
-        <input type = "radio" name ="question8-option" value = "Elanor">Elanor
-        <input type = "radio" name ="question8-option" value = "Ruger">Ruger
-        <input type = "radio" name ="question8-option" value = "Stugots">Stugots
+        <p id= "question7">What was the name of Tony's boat?</p>
+        <input type = "radio" name ="question7-option" value = "Meadow">Virginia
+        <input type = "radio" name ="question7-option" value = "Elanor">Elanor
+        <input type = "radio" name ="question7-option" value = "Ruger">Ruger
+        <input type = "radio" name ="question7-option" value = "Stugots">Stugots
 
     </div>
 
-    <div class = "question-container?">
+    <div class = "question-container">
         <!-- questions -->
-        <p id= "question4">What animal lived in Tony's pool?</p>
+        <p id= "question8">What animal lived in Tony's pool?</p>
         <input type = "radio" name ="question8-option" value = "fish">fish
         <input type = "radio" name ="question8-option" value = "ducks">ducks
         <input type = "radio" name ="question8-option" value = "eels">eels
