--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class = timer>
     <p>
         Timer <span id = "time-remaining"></span>
     </p>
-
+    </div>
     <div class = "the-final">
         <p>
-            correct <span id = "correct-answers"></span>
+            Correct <span id = "correct-answers"></span>
         </p>
         <p>
-            incorrect <span id = "wrong-answers"></span>
+            Incorrect <span id = "wrong-answers"></span>
         </p>
 
     </div>
@@ -76,7 +76,7 @@
 
     <div class = "question-container">
         <!-- questions -->
-        <p id= "question6">who is Tony's therapist?</p>
+        <p id= "question6">Who is Tony's therapist?</p>
         <input type = "radio" name ="question6-option" value = "Dr-Melfi">Dr Melfi
         <input type = "radio" name ="question6-option" value = "Dr-Angelini">Dr Angelini
         <input type = "radio" name ="question6-option" value = "Dr-Cusmano">Dr Cusmano
@@ -103,6 +103,11 @@
         <input type = "radio" name ="question8-option" value = "flamingos">flamingos
 
     </div>
+
+    <audio-controls>
+        <source src="sopranostheme.mp3" type="audio/mpeg"/>
+        
+    </audio-controls>
     <script src="assets/javascript/app.js"></script>
 </body>
 </html>
